Always autostart Camera Streams. Add Auth to Camera Routes. Create Login and Dashboard GUI.

--- a/tdb/securitycamera/templates/login.html
+++ b/tdb/securitycamera/templates/login.html
@@ -34,7 +34,7 @@
             const status = document.getElementById("loginStatus")
             const responseData = JSON.parse(xmlHttpRequest.responseText)
             if (xmlHttpRequest.status === 200) {
-                window.location.href = "/users/me/";
+                window.location.href = "/camera/dashboard";
             } else {
                 status.innerText = "Error logging in: " + responseData.detail
             }
